Fix incorrect spacing in view

--- a/app/assets/stylesheets/poc/layouts/results.scss
+++ b/app/assets/stylesheets/poc/layouts/results.scss
@@ -15,6 +15,7 @@
   display: inline-block;
   font-weight: bold;
   margin-bottom: 0;
+  padding: $spacing-3 0;
   width: $cols-6;
 
   a {
@@ -35,6 +36,7 @@
 .search {
   float: right;
   max-width: $design-max-width;
+  padding-top: $spacing-3;
   position: relative;
 
   .submit {
@@ -65,11 +67,13 @@
   }
 }
 
-
 .search-results {
+  clear: right;
   float: right;
   max-width: $design-max-width;
+  padding: 18px 0 $spacing-3 $spacing-3;
   position: relative;
+  width: $cols-9;
 
   .all {
     display: none;
@@ -93,34 +97,10 @@
 }
 
 
-.search-results {
-  clear: right;
-  float: right;
-  padding: $spacing-3 0 $spacing-3 $spacing-3;
-  width: $cols-9;
-
-  &.none {
-    float: left;
-    padding: $spacing-1 0;
-    width: auto;
-
-    .information {
-      position: static;
-      text-indent: initial;
-      width: auto;
-    }
-  }
-
-  .information {
-    @include access-hidden;
-  }
-}
-
-
 .search-results-filters {
   float: left;
   margin-top: 3px;
-  padding: $spacing-2 0 0 0;
+  padding: 35px 0 0 0;
   position: relative;
   width: $cols-3;
 
@@ -177,8 +157,7 @@
 
 #search-results {
   background-color: $stone-50;
-  min-height: 140px;
-  padding: $spacing-3 0;
+  min-height: 85px;
 }
 
 
